// Configuration proto for ResourceDiscovery (rds) server.
// Example config:
//
// provider {
//   id: "gcp"
//   gcp_config {
//     project_id: 'test-project-id'
//     gce_instances {}
//     forwarding_rules {}
//   }
// }
syntax = "proto2";

package cloudprober.rds;

import "github.com/google/cloudprober/rds/gcp/proto/config.proto";
import "github.com/google/cloudprober/rds/kubernetes/proto/config.proto";

message ServerConf {
  // List of providers that server supports.
  repeated Provider provider = 1;
}

message Provider {
  // Provider identifier, e.g. "gcp". Server routes incoming requests to various
  // providers based on this id.
  optional string id = 1;

  oneof config {
    gcp.ProviderConfig gcp_config = 2;
    kubernetes.ProviderConfig kubernetes_config = 3;
  }
}
